--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "boxicons": "^2.1.4",
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "remixicon": "^4.3.0"
+    "remixicon": "^4.3.0",
+    "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
