--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "remixicon": "^4.3.0",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
@@ -30,7 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.27.0",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.1"
   }
